--- a/src/pages/blog/style.css
+++ b/src/pages/blog/style.css
@@ -26,10 +26,22 @@ CVWrapper {
 	display: block;
 	margin-left: auto;
     margin-right: auto;
-	
 	/* margin: 10px; */
 	padding: 10px;
 	background: #ededed;
+}
+.btn {
+	background-color: #4D4D4D;
+	border: none;
+	color: white;
+	margin: 0 0 0 31px;
+	padding: 4px 4px 2px 4px;
+	cursor: pointer;
+	font-size: 14px;
+}
+/* Darker background on mouse-over */
+.btn:hover {
+	background-color: RoyalBlue;
 }
 #cv {
 	width: 70%;
@@ -38,7 +50,7 @@ CVWrapper {
     margin-right: auto;
 	/* max-width: 1000px; */
 	background: #ededed;
-	font-family: 'Rokkitt', Helvetica, Arial, sans-serif;
+	font-family: Garamond, Helvetica, Arial, sans-serif;
 	line-height: 1.2;
 }
 div ul {
@@ -62,13 +74,13 @@ div ol{
 #name h1 {
 	font-size: 2.5em;
 	font-weight: 700;
-	font-family: 'Rokkitt', Helvetica, Arial, sans-serif;
+	font-family: Garamond, Helvetica, Arial, sans-serif;
 	margin: 0px;
 }
 
 #name h2 {
 	font-size: 2em;
-	font-family: 'Rokkitt', Helvetica, Arial, sans-serif;
+	font-family: Garamond, Helvetica, Arial, sans-serif;
 	margin: 0px;
 }
 
@@ -152,14 +164,14 @@ section:last-child {
 }
 
 .sectionTitle h1 {
-	font-family: 'Rokkitt', Helvetica, Arial, sans-serif;
+	font-family: Garamond, Helvetica, Arial, sans-serif;
 	font-style: italic;
 	font-size: 1.5em;
 	color: #666;
 }
 
 .sectionContent h2 {
-	font-family: 'Rokkitt', Helvetica, Arial, sans-serif;
+	font-family: Garamond, Helvetica, Arial, sans-serif;
 	font-size: 1.5em;
 	margin-bottom: -2px;
 }
