--- a/src/pages/about/style.css
+++ b/src/pages/about/style.css
@@ -88,7 +88,7 @@ div ol{
 }
 
 #headshot {
-	width: 15%;
+	width: 30%;
 	float: left;
 	margin: 10px;
 }
@@ -196,7 +196,7 @@ section:last-child {
 
 @media all and (min-width: 602px) and (max-width: 800px) {
 	#headshot {
-		display: none;
+		/* display: none; */
 	}
 	
 	.keySkills {
@@ -214,7 +214,7 @@ section:last-child {
 	}
 	
 	#headshot {
-		display: none;
+		/* display: none; */
 	}
 	
 	#name, #contactDetails {
