--- a/src/pages/about/style.css
+++ b/src/pages/about/style.css
@@ -22,11 +22,11 @@ article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section {
 	color: #444;
 } */
 CVWrapper {
-	margin: 55px auto 10px; /* Add a top margin to avoid content overlay */
+    padding: 55px 10px 10px;
+	margin: 0 auto 10px; /* Add a top margin to avoid content overlay */
 	font-family: Garamond, Georgia, Arial, sans-serif;
-	/* width: 95vw; */
+	width: 95vw;
 	display: block;
-	padding: 10px;
 	background: #eee;
 }
 .btn {
@@ -83,31 +83,35 @@ div ol{
 }
 
 #mainArea {
-	padding: 0 30px 0 10px;
+	padding: 0 20px 0 10px;
 }
 
 #headshot {
-	width: 30%;
+	width: 25%;
 	float: left;
 	margin: 10px;
+	max-width: 140px;
+	min-width: 100px;
 }
 
 #headshot img {
 	width: 100%;
 	height: auto;
-	border-radius: 10px;
+	border-radius: 50%;
+	background-color: white;
+	margin: auto 1vw;
 }
 
 #name {
 	/* float: right; */
 	text-align: center;
-	margin: 15px;
+	margin: 2vw;
 }
 
 #contactDetails {
 	float: right;
 	font-size: 17px;
-	margin: 20px;
+	margin: 2vw auto 0;
 }
 
 #contactDetails ul {
@@ -137,8 +141,17 @@ div ol{
 
 section {
 	border-top: 1px solid #dedede;
-	padding: 20px 0 0;
-	
+	padding: 0;
+}
+
+section img {
+	width: 20%;
+	float: left;
+	/* margin: 0; */
+	/* padding-left: 10%; */
+	margin: 2.5% auto auto 5%;
+	max-width: 80px;
+	min-width: 60px;
 }
 
 section:first-child {
@@ -151,14 +164,14 @@ section:last-child {
 
 .sectionTitle {
 	float: left;
-	width: 25%;
+	/* width: 25%; */
 	margin: 7px;
 }
 
 .sectionContent {
 	float: right;
 	width: 72.5%;
-	margin: 7px;
+	margin: 6px;
 }
 
 .sectionTitle h1 {
@@ -171,7 +184,7 @@ section:last-child {
 
 .sectionContent h2 {
 	font-family: Garamond, Georgia, Arial, sans-serif;
-	font-size: 1.5em;
+	font-size: 1.3em;
 	font-weight: bold;
 	/* margin-bottom: -2px; */
 }
@@ -180,6 +193,7 @@ section:last-child {
 	font-size: 1em;
 	font-style: italic;
 	margin-bottom: 10px;
+	display: flex;
 }
 
 .keySkills {
@@ -220,7 +234,7 @@ section:last-child {
 	}
 	
 	#name, #contactDetails {
-		float: none;
+		/* float: none; */
 		width: 100%;
 		text-align: center;
 	}
@@ -240,11 +254,15 @@ section:last-child {
 		-webkit-column-count:2;
 		column-count:2;
 	}
+	section img {
+		width: 15%;
+		margin: 1% 3.5% 10% 0;
+	}
 }
 
 @media all and (max-width: 480px) {
 	.mainDetails {
-		padding: 15px 15px;
+		padding: 5px 15px;
 	}
 	
 	section {
@@ -252,9 +270,13 @@ section:last-child {
 	}
 	
 	#mainArea {
-		padding: 0 25px;
+		padding: 0 12px;
 	}
 
+	section img {
+		width: 15%;
+		margin: 3% 3.5% 10% 0;
+	}
 	
 	.keySkills {
 	-moz-column-count:1;
