--- a/src/pages/about/style.css
+++ b/src/pages/about/style.css
@@ -33,10 +33,8 @@ CVWrapper {
 	background-color: #4D4D4D;
 	border: none;
 	color: white;
-	margin: 0 0 0 31px;
 	padding: 4px 4px 2px 4px;
 	cursor: pointer;
-	font-size: 14px;
 }
 /* Darker background on mouse-over */
 .btn:hover {
@@ -54,11 +52,12 @@ CVWrapper {
 }
 div ul {
 	list-style: square;
-	padding: 5px 0 0 30px;
+	padding: 5px 0 20px 20px;
+	/* float: left; */
 }
 div ul ul{
 	list-style: circle;
-	padding-left: 50px;
+	padding: 5px 0 0 30px;
 }
 div ol{
 	list-style: decimal;
@@ -90,7 +89,7 @@ div ol{
 	width: 25%;
 	float: left;
 	margin: 10px;
-	max-width: 140px;
+	max-width: 150px;
 	min-width: 100px;
 }
 
@@ -110,8 +109,8 @@ div ol{
 
 #contactDetails {
 	float: right;
-	font-size: 17px;
-	margin: 2vw auto 0;
+	font-size: 15px;
+	margin: 1px;
 }
 
 #contactDetails ul {
@@ -147,9 +146,7 @@ section {
 section img {
 	width: 20%;
 	float: left;
-	/* margin: 0; */
-	/* padding-left: 10%; */
-	margin: 2.5% auto auto 5%;
+	margin: 2.5% auto 1% 4%;
 	max-width: 80px;
 	min-width: 60px;
 }
@@ -192,7 +189,7 @@ section:last-child {
 .subDetails {
 	font-size: 1em;
 	font-style: italic;
-	margin-bottom: 10px;
+	margin-bottom: 5px;
 	display: flex;
 }
 
@@ -255,8 +252,8 @@ section:last-child {
 		column-count:2;
 	}
 	section img {
-		width: 15%;
-		margin: 1% 3.5% 10% 0;
+		width: 12%;
+		margin: 1% 3.5% 6% 0;
 	}
 }
 
@@ -271,11 +268,6 @@ section:last-child {
 	
 	#mainArea {
 		padding: 0 12px;
-	}
-
-	section img {
-		width: 15%;
-		margin: 3% 3.5% 10% 0;
 	}
 	
 	.keySkills {
